--- a/src/Components/NDIS Badge/badge2.css
+++ b/src/Components/NDIS Badge/badge2.css
@@ -1,16 +1,14 @@
-.app-download {
+/* .app-download {
     display: flex;
     justify-content: space-around;
     align-items: center;
     direction: rtl;
     background-color: #070a37;
-    /* top: 1rem; */
     position: fixed;
     flex-direction: column;
     z-index: 1000;
    margin-top:83.7px;
     left: 83.1rem;
-    /* left: 84.5rem; */
     border-bottom-right-radius: 30%;
     border-bottom-left-radius: 30%;
     box-shadow: 1px 2px 14px 5px #00000070;
@@ -30,8 +28,330 @@
         font-size:.9rem;
       }
     }
-    
+  
+}
+
+
+@media only screen and (max-width: 1480px) {
+  .app-download {
+      left: 67.5rem;
+      padding: 0.8rem;
+      background-color: green;
+
+  }
+  .picture{
+width: 120px;
+height: 60px;
+  }
+  .app-download label#first-title {
+      font-size: 1.1rem;
+  }
+  .app-download label#second-title {
+      font-size: 0.8rem;
+  }
+}
+
+
+@media only screen and (max-width: 1200px) {
+  .app-download {
+      left: 63rem;
+      padding: 0.4rem;
+      background-color: pink;
+  }
+  .picture{
+    width: 110px;
+    height: 60px;
+      }
+  .app-download label#first-title {
+      font-size: 1.1rem;
+  }
+  .app-download label#second-title {
+      font-size: 0.8rem;
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .app-download {
+      left: 50rem;
+      padding: 0.1rem;
+      background-color: orange;
+  }
+  .app-download label#first-title {
+      font-size: 1rem;
+  }
+  .app-download label#second-title {
+      font-size: 0.7rem;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .app-download {
+      left: 37rem;
+      padding: 0.1rem;
+      background-color: aqua;
+  }
+  .app-download label#first-title {
+      font-size: 0.9rem;
+  }
+  .app-download label#second-title {
+      font-size: 0.6rem;
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  .app-download {
+      left: 23rem;
+      padding: 0.1rem;
+      background-color: yellow;
+  }
+  .app-download label#first-title {
+      font-size: 0.8rem;
+  }
+  .app-download label#second-title {
+      font-size: 0.5rem;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .app-download {
+      left: 5rem;
+      padding: 0.3rem;
+      background-color: blanchedalmond;
+  }
+  .app-download label#first-title {
+      font-size: 0.7rem;
+  }
+  .app-download label#second-title {
+      font-size: 0.4rem;
+  }
+}
+
+ */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ 
+ .app-download {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  direction: rtl;
+  background-color: #070a37;
+  width: 450px;
+  position: relative;
+  /* position: fixed; */
+  /* z-index: 1000; */
+  margin-top: 83.7px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-bottom-right-radius: 5%; 
+ border-bottom-left-radius: 5%;
+  box-shadow: 1px 2px 14px 5px #00000070;
+  padding: 1rem;
+  flex-direction: row;
+}
+
+.app-download label {
+  margin: 0 0.5rem;
+  color: #fff;
+  cursor: pointer;
+}
+
+.app-download label#first-title {
+  font-size: 1.3rem;
 
 }
+
+.app-download label#second-title {
+  font-size: 1.3rem;
+
+
+}
+
+.picture {
+  width: 128px;
+  height: 64px;
+}
+
+
+@media only screen and (max-width: 1480px) {
+  .app-download {
+      padding: 0.4rem;
+      /* background-color: pink; */
+  }
+  .picture {
+      width: 120px;
+      height: 60px;
+  }
+  .app-download label#first-title {
+      font-size: 1.2rem;
+     
+  }
+  .app-download label#second-title {
+      font-size: 1.2rem;
+   
+  }
+}
+
+
+@media only screen and (max-width: 1200px) {
+  .app-download {
+      padding: 0.5rem;
+  /* background-color: orange; */
+  }
+  .app-download label {
+    margin: 0 1.8rem; 
+    color: #fff;
+    cursor: pointer;
+  }
+  .picture {
+      width: 110px;
+      height: 55px;
+  }
+  .app-download label#first-title {
+      font-size: 1.2rem;
+   
+  }
+  .app-download label#second-title {
+      font-size: 1.2rem;
+      
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .app-download {
+    padding: 0.4rem;
+   /* background-color: yellow; */
+
+}
+.app-download label {
+  margin: 0 2.6rem;
+  color: #fff;
+  cursor: pointer;
+}
+.picture {
+    width: 110px;
+    height: 55px;
+}
+.app-download label#first-title {
+    font-size: 1.2rem;
+ 
+}
+.app-download label#second-title {
+    font-size: 1.2rem;
+    
+}
+}
+
+@media only screen and (max-width: 768px) {
+  .app-download {
+    padding: 0.3rem;
+    /* background-color: greenyellow; */
+}
+.app-download label {
+  margin: 0 2.8rem;
+  color: #fff;
+  cursor: pointer;
+}
+.picture {
+    width: 110px;
+    height: 55px;
+}
+}
+
+
+
+@media only screen and (max-width: 576px) {
+  .app-download {
+    padding: 0.8rem;
+    padding-top: 10px;
+    flex-direction: column;
+    width: 140px;
+    /* background-color: aquamarine; */
+}
+.app-download label {
+  margin: 0 2.8rem;
+  color: #fff;
+  cursor: pointer;
+}
+.picture {
+    width: 90px;
+    height: 45px;
+}
+.app-download label#first-title {
+  font-size: 1.1rem;
+}
+.app-download label#second-title {
+  font-size: 1.1rem;
+}
+
+}
+
+@media only screen and (max-width: 400px) {
+  .app-download {
+    padding: 0.2rem;
+    padding-top: 10px;
+    flex-direction: column;
+    width: 110px;
+    /* background-color: aqua; */
+  
+}
+.app-download label {
+  margin: 0 2.8rem; 
+  color: #fff;
+  cursor: pointer;
+}
+.picture {
+    width: 80px;
+    height: 40px;
+}
+.app-download label#first-title {
+  font-size: 0.8rem;
+  font-weight: bold;
+}
+.app-download label#second-title {
+  font-size: 0.8rem;
+  font-weight: bold;
+  padding-bottom: 10px;
+}
+
+
+}
+
+
+
+
+
+
+
+
+
+
 
 
